# metrics_pipeline

./: .gitignore  LICENSE  Makefile  PACKAGING.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
docs/api/: reference.md  usage.md
docs/architecture/: overview.md
docs/contributing/: CONTRIBUTING.md
docs/deployment/: guide.md
examples/aws/: aws_pipeline_example.py
examples/demo/: demo_dashboard.py
examples/local/: local_pipeline_example.py
src/metrics_pipeline/: __init__.py
src/metrics_pipeline/adapters/: __init__.py
src/metrics_pipeline/adapters/ingestion/: __init__.py  base.py  http.py  sqs.py
src/metrics_pipeline/adapters/storage/: __init__.py  base.py  clickhouse.py  memory.py
src/metrics_pipeline/adapters/visualization/: __init__.py  base.py  metabase.py  mock.py
src/metrics_pipeline/core/: __init__.py
src/metrics_pipeline/core/models/: __init__.py  metrics.py
src/metrics_pipeline/core/pipeline/: __init__.py  processor.py
src/metrics_pipeline/utils/: performance.py
tests/integration/: test_pipeline_integration.py
tests/unit/adapters/ingestion/: test_http.py  test_sqs.py
tests/unit/adapters/storage/: test_clickhouse.py  test_memory.py
tests/unit/adapters/visualization/: test_metabase.py  test_mock.py
tests/unit/core/models/: test_metrics.py
tests/unit/core/pipeline/: test_processor.py
